# bilimanga-downloader

./: .gitignore  Cargo.toml  README.md  const.go  decrypt.go  go.mod  main.go  request.go  types.go
src/: main.rs  requests.rs  structs.rs
