[package]
name = "bilimanga-downloader"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.9", features = ["derive"] }
const_format = "0.2.32"
futures = "0.3.30"
log = "0.4.22"
pretty_env_logger = "0.5.0"
reqwest = { version = "0.12.5", features = ["brotli", "cookies", "deflate", "gzip", "json", "zstd"] }
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.120"
tokio = { version = "1.38.0", features = ["full"] }
url = "2.5.2"
zip = "2.1.3"
